--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,8 @@ click==8.2.1
 colorama==0.4.6
 dataclasses-json==0.6.7
 distro==1.9.0
+dnspython==2.7.0
+eventlet==0.40.0
 Flask==3.1.1
 Flask-SocketIO==5.5.1
 frozenlist==1.6.0
