--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -45,7 +45,7 @@ propcache==0.3.1
 pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
-python-dotenv==1.1.0
+# python-dotenv==1.1.0
 python-engineio==4.12.1
 python-socketio==5.13.0
 PyYAML==6.0.2
